--- a/src/13/deployment.yml
+++ b/src/13/deployment.yml
@@ -1,8 +1,7 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: default
   labels:
     app: nginx
 spec:
